bin/testsuite/tests/compiler/src/errors/compiler5144.swg
#global testerror "Err0548"
func hello(name: string)
{
    return "hello" ++ name
}
